--- a/app/static/css/layout_top_navbar.css
+++ b/app/static/css/layout_top_navbar.css
@@ -6,13 +6,6 @@ html, body {
     /*background: rgba(203, 203, 210, 0.15);*/
 }
 
-body {
-    overflow-x: hidden;
-}
-
-/*.content{*/
-/*overflow-x: hidden;*/
-/*}*/
 footer {
     padding: 30px 0;
 }
